# simple-gtkmm-flatpak-app

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  build  com.sharedpointer.gtkmm-app.json  main.cpp  main.glade
